Fix body padding on small viewports

--- a/static/styles/common.css
+++ b/static/styles/common.css
@@ -44,7 +44,7 @@ body {
 
 @media screen and (max-width: 1000px) {
   body {
-    padding: 3rem;
+    padding: 3rem 1.5rem;
   }
 }
 
